<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:minHeight="80dp"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/listing_num"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"/>

    <LinearLayout
        android:id="@+id/vote_section"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/listing_num"
        android:orientation="vertical"
        android:layout_width="40dp"
        android:gravity="center">

        <ImageButton
            android:id="@+id/listing_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/reddit_up_grey"
            android:contentDescription="@string/up_vote"/>

        <TextView
            android:id="@+id/listing_karma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/listing_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/reddit_down_grey"
            android:contentDescription="@string/down_vote"/>
    </LinearLayout>
    
    <ImageView
        android:id="@+id/listing_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/vote_section"
        android:layout_toRightOf="@+id/vote_section"
        android:contentDescription="@string/story_thumb"/>
    
    <TextView
        android:id="@+id/listing_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/vote_section"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/listing_image"
        android:textColor="#FFFFFF"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/listing_domain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listing_title"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/listing_title"
        android:textSize="10dp"/>
    
    <TextView
        android:id="@+id/submit_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listing_domain"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/listing_domain"
        android:textSize="10dp"/>
   
    <TextView
        android:id="@+id/listing_misc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/submit_time"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/submit_time"
        android:textSize="10dp"/>

</RelativeLayout>